--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,10 @@
 .claculator_conatiner{
-  border:1px solid rgb(57, 56, 56);
+  border: 1px solid rgb(57, 56, 56);
   width: 21%;
   margin: 10px;
   border-radius: 5px;
+  padding: 10px;
+  box-sizing: border-box;
 
 }
 
