--- a/assets/index-CQ__dwRl.css
+++ b/assets/index-CQ__dwRl.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";._claculator_conatiner_102en_1{border:1px solid rgb(57,56,56);width:21%;margin:10px;border-radius:5px}._input_conatiner_1d39h_1{margin:20px;width:280px}._button_container_yv5q1_1{gap:10px;display:flex;justify-content:center;flex-wrap:wrap}._buttons_yv5q1_17{width:45px;height:45px;margin:3px}/*!
+@charset "UTF-8";._claculator_conatiner_1b9tp_1{border:1px solid rgb(57,56,56);width:21%;margin:10px;border-radius:5px;padding:10px;box-sizing:border-box}._input_conatiner_4o6sp_1{margin:20px;width:219px}._button_container_yv5q1_1{gap:10px;display:flex;justify-content:center;flex-wrap:wrap}._buttons_yv5q1_17{width:45px;height:45px;margin:3px}/*!
 * Bootstrap  v5.3.7 (https://getbootstrap.com/)
 * Copyright 2011-2025 The Bootstrap Authors
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
